# dexterity

./: .rustfmt.toml  Anchor.toml  Cargo.toml  README.md  TrezoaAnchor.toml  build.sh  deploy_all.sh  package.json
client/: pyproject.toml  requirements.txt
client/dexterity/: program_ids.py
client/dexterity/constant_fees/: actions.py  instructions.py
client/dexterity/dex/: actions.py  addrs.py  sdk_context.py
client/dexterity/dummy_oracle/: actions.py
client/dexterity/instruments/: actions.py
client/dexterity/risk/: actions.py
client/dexterity/scripts/: build  extract_program_ids.py  generate_code.py  get_trader_risk_groups_key.py  keypair_to_b58.py  start_test_validator.py
client/dexterity/utils/: trezoa.py
dexteritysdk/: Cargo.toml
dexteritysdk/src/: admin.rs  bootstrap.rs  context.rs  lib.rs  sdk_client.rs  state.rs  trader.rs
dexteritysdk/src/common/: mod.rs  utils.rs
dexteritysdk/src/instrument/: initialize_derivative.rs  mod.rs  settle_derivative.rs
dexteritysdk/src/oracle/: create_clock.rs  create_oracle.rs  update_clock.rs  update_oracle.rs
dexteritysdk/src/processor/: cancel_order.rs  clear_expired_orderbook.rs  combo.rs  consume_orderbook_events.rs  deposit_funds.rs  fees.rs  market_product.rs  market_product_group.rs  new_order.rs  (+6 more)
programs/dex/: Cargo.toml
programs/dummy-oracle/: Cargo.toml
programs/dummy-oracle/src/: entrypoint.rs  error.rs  processor.rs  state.rs  utils.rs
programs/dummy-oracle/src/processor/: initialize_clock.rs  initialize_oracle.rs  update_clock.rs  update_price.rs
programs/instruments/: Cargo.toml
(+110 files in other folders)
