[package]
name = "dummy-oracle"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
trezoa-program = "1.8.12"
thiserror = "1.0"
tpl-token = {version = "3.1.1", features = ["no-entrypoint"]}
tpl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
arrayref = "0.3.6"
borsh = "0.9"
bincode = "1.3.3"

[lib]
crate-type = ["cdylib", "lib"]
